// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages / Browse / components / SearchField Check search field should render with initial search query 1`] = `
<SearchField
  fetchSuggestions={[MockFunction]}
  name="search"
  openScanner={[MockFunction]}
  pageId="1234"
  query="foo"
  showScannerIcon={false}
  submitSearch={[MockFunction]}
>
  <div
    className="theme__browse__search-field"
    data-test-id="SearchField"
  >
    <div
      className="css-2ciheh"
    >
      <div
        className="css-1utu657"
      >
        <form
          action="."
          onSubmit={[Function]}
        >
          <label
            className="css-19t1ju7"
            htmlFor="search"
          >
            <div
              className="css-tfmeke"
            >
              <Magnifier>
                <Icon
                  className=""
                  color={null}
                  content="<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>"
                  size="inherit"
                  viewBox="0 0 24 24"
                >
                  <svg
                    className="css-yys9hb  common__icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>",
                      }
                    }
                    style={
                      Object {
                        "fill": null,
                        "fontSize": "inherit",
                      }
                    }
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </Icon>
              </Magnifier>
            </div>
          </label>
          <_default
            autoComplete={false}
            className="css-11ngaym"
            onChange={[Function]}
            onFocusChange={[Function]}
            onSubmit={[Function]}
            setRef={[Function]}
            type="search"
            value="foo"
          >
            <SimpleInput
              attributes={null}
              autoComplete={false}
              autoCorrect={false}
              className="css-11ngaym"
              disabled={false}
              id={null}
              isControlled={false}
              maxlength=""
              name={null}
              onChange={[Function]}
              onFocusChange={[Function]}
              onKeyPress={[Function]}
              onSanitize={[Function]}
              onSubmit={[Function]}
              onValidate={[Function]}
              password={false}
              setRef={[Function]}
              type="search"
              validateOnBlur={true}
              value="foo"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                className="css-11ngaym simpleInput common__simple-input"
                disabled={false}
                id={null}
                maxLength=""
                name={null}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                type="search"
                value="foo"
              />
            </SimpleInput>
          </_default>
        </form>
      </div>
      <div>
        <button
          className="css-cmi6wl css-gyrv08"
          onClick={[Function]}
          type="button"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={Object {}}
            role={null}
            string="search.cancel"
          >
            <span
              className={null}
              role={null}
            >
              search.cancel
            </span>
          </Translate>
        </button>
      </div>
    </div>
    <Component
      bottomHeight={0}
      onClick={[Function]}
      searchPhrase="foo"
      visible={false}
    />
  </div>
</SearchField>
`;

exports[`pages / Browse / components / SearchField Check search field should show suggestions when focused 1`] = `
<SearchField
  fetchSuggestions={[MockFunction]}
  name="search"
  openScanner={[MockFunction]}
  pageId="1234"
  query="foo"
  showScannerIcon={false}
  submitSearch={[MockFunction]}
>
  <div
    className="theme__browse__search-field"
    data-test-id="SearchField"
  >
    <div
      className="css-2ciheh"
    >
      <div
        className="css-1utu657"
      >
        <form
          action="."
          onSubmit={[Function]}
        >
          <label
            className="css-19t1ju7"
            htmlFor="search"
          >
            <div
              className="css-tfmeke"
            >
              <Magnifier>
                <Icon
                  className=""
                  color={null}
                  content="<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>"
                  size="inherit"
                  viewBox="0 0 24 24"
                >
                  <svg
                    className="css-yys9hb  common__icon"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<path d=\\"M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z\\"/>",
                      }
                    }
                    style={
                      Object {
                        "fill": null,
                        "fontSize": "inherit",
                      }
                    }
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </Icon>
              </Magnifier>
            </div>
          </label>
          <_default
            autoComplete={false}
            className="css-11ngaym"
            onChange={[Function]}
            onFocusChange={[Function]}
            onSubmit={[Function]}
            setRef={[Function]}
            type="search"
            value="foo"
          >
            <SimpleInput
              attributes={null}
              autoComplete={false}
              autoCorrect={false}
              className="css-11ngaym"
              disabled={false}
              id={null}
              isControlled={false}
              maxlength=""
              name={null}
              onChange={[Function]}
              onFocusChange={[Function]}
              onKeyPress={[Function]}
              onSanitize={[Function]}
              onSubmit={[Function]}
              onValidate={[Function]}
              password={false}
              setRef={[Function]}
              type="search"
              validateOnBlur={true}
              value="foo"
            >
              <input
                autoComplete="off"
                autoCorrect="off"
                className="css-11ngaym simpleInput common__simple-input"
                disabled={false}
                id={null}
                maxLength=""
                name={null}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                type="search"
                value="foo"
              />
            </SimpleInput>
          </_default>
        </form>
      </div>
      <div>
        <button
          className="css-cmi6wl"
          onClick={[Function]}
          type="button"
        >
          <Translate
            acceptPlainTextWithPlaceholders={false}
            className={null}
            params={Object {}}
            role={null}
            string="search.cancel"
          >
            <span
              className={null}
              role={null}
            >
              search.cancel
            </span>
          </Translate>
        </button>
      </div>
    </div>
    <div
      className="css-1su8uh1"
    />
    <Component
      bottomHeight={0}
      onClick={[Function]}
      searchPhrase="foo"
      visible={true}
    />
  </div>
</SearchField>
`;
